# GeoDataReader

./: .gitignore  LICENSE.txt  MANIFEST.in  ReadMe.md  __init__.py  env.yml  main.py  pyproject.toml  read_BRO.py  requirements.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
BroReader/: __init__.py  read_BRO.py
geodatareader/BroReader/: read_BRO.py
read_cpt/: read_BRO.py
unit_test/: test_bro_reader.py
unit_test/data/: CPT000000057519.pickle
