[project]
name = "broreader"
version = "1.1"
authors = [
    {name = "Eleni Smyrniou", email = "eleni.smyrniou@deltares.nl"},
    {name = "Bruno Zuada Coelho", email = "bruno.zuadacoelho@deltares.nl"},
]
description = "A python toolbox to download and read cpts from the bro based on a radius distance."
readme = "ReadMe.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.2",
    "pyproj>=3.4.1",
    "lxml>=4.9.2",
    "numpy>=1.24.1",
    "pandas>=1.5.3",
    "d-geolib-plus @ git+https://github.com/Deltares/GEOLib-Plus.git",
]

[project.optional-dependencies]
test = [
    "pytest>=7.3.1",
]

[tool.setuptools.packages.find]
include = ["AhnReader*", "BroReader*"]
