[metadata]
name = broreader
version = 1.0
author = Eleni Smyrniou, Bruno Zuada Coelho
author_email = eleni.smyrniou@deltares.nl, bruno.zuadacoelho@deltares.nl
description = A python toolbox to download and read cpts from the bro based on a radius distance.
long_description = file: ReadMe.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: MIT
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires >=3.8, <3.10
zip_safe = no
install_requires =
  d-geolib-plus

