[metadata]
name = broreader
version = 1.1
author = Eleni Smyrniou, Bruno Zuada Coelho
author_email = eleni.smyrniou@deltares.nl, bruno.zuadacoelho@deltares.nl
description = A python toolbox to download and read cpts from the bro based on a radius distance.
long_description = file: ReadMe.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: MIT
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires >=3.8
zip_safe = no
install_requires =
  git+https://github.com/Deltares/GEOLib-Plus.git
  requests>=2.28.2
  pyproj>=3.4.1
  lxml>=4.9.2
  numpy>=1.24.1
  pandas>=1.5.3
