[metadata]
name = geodatareader
version = 1.1
author = Eleni Smyrniou, Bruno Zuada Coelho
author_email = eleni.smyrniou@deltares.nl, bruno.zuadacoelho@deltares.nl
description = A python toolbox to download and read geotechnical data including CPTs from the BRO based on a radius distance.
long_description = file: ReadMe.md
long_description_content_type = text/markdown
url = https://github.com/PlatypusBytes/GeoDataReader
project_urls =
    Homepage = https://github.com/PlatypusBytes/GeoDataReader
    Repository = https://github.com/PlatypusBytes/GeoDataReader
    Issues = https://github.com/PlatypusBytes/GeoDataReader/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    requests>=2.28.2
    pyproj>=3.4.1
    lxml>=4.9.2
    numpy>=1.24.1
    pandas>=1.5.3

[options.extras_require]
full = 
    geolib_plus @ git+https://github.com/Deltares/GEOLib-Plus.git
test = 
    pytest>=7.3.1
dev = 
    pytest>=7.3.1
    tox>=3.8.0
    black
    flake8